# haske

./: .gitignore  CNAME  Cargo.toml  Cargo.toml.txt  README.md  haske_app.py  pyproject.toml
benchmark/: fastapi_app.py  haske_app.py  locustfile.py  run_benchmark.py  test_individual.py  test_simple.py
benchmark/benchmark_scripts/: json_response.py  path_params.py  post_requests.py  simple_get.py  template_rendering.py
benchmark/results/: comparison_report.json  fastapi_results.json  haske_results.json
benchmark/templates/: test_template.html
examples/hello_world/: app.py
examples/js_integration_app/: app.py
haske-core/: .gitignore  Cargo.toml
haske-core/src/: cache.rs  compress.rs  crypto.rs  json.rs  lib.rs  orm.rs  path.rs  router.rs  template.rs  ws.rs
haske-python/: Cargo.toml  _haske_core.cp312-win_amd64.pyd  haske-0.1.0-cp313-cp313-win_amd64.whl  haske-0.2.0-cp313-cp313-win_amd64.whl  haske-0.2.0-cp39-abi3-win_amd64.whl  haske-0.2.10-py3-none-any.whl  haske-0.2.13-py3-none-any.whl  haske-0.2.7-py3-none-any.whl  haske-0.2.8-py3-none-any.whl  haske_core-0.1.0-cp313-cp313-win_amd64.whl  haske_core-0.2.0-cp39-abi3-win_amd64.whl  haske_core-0.2.8-cp39-abi3-win_amd64.whl  pyproject.toml  requirements.txt  setup.py
haske-python/benchmark/: benchmark_orm.py  haske_orm.py
haske-python/examples/blog_app/: blog.db
haske-python/examples/hello_world/: app.py
haske-python/haske/: __init__.py  admin.py  app.py  auth.py  cli.py  exceptions.py  middleware.py  orm.py  request.py  response.py  templates.py
haske-python/haske.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
haske-python/src/: lib.rs
tests/: test_app.py  test_json_bridge.py  test_routing.py  test_ws.py
wheel/: haske-0.1.0-cp312-cp312-win_amd64.whl
