# Cargo.toml (in root directory)
[package]
name = "haske-core"
version = "0.2.1"
edition = "2021"

# Explicitly tell Cargo where to find source files
[lib]
name = "_haske_core"
path = "haske-core/src/lib.rs"  # Explicit path
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py39"] }