[package]
name = "haske-core"
version = "0.2.0"
edition = "2021"

[lib]
name = "haske_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["server"]
server = ["hyper", "tokio", "tera", "matchit"]
python-handlers = ["pyo3"]
simd-json = ["simd-json"]

[dependencies]
# Async runtime + server
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time", "signal"] }
hyper = { version = "0.15", optional = true, features = ["full"] }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = { version = "0.6", optional = true }

# Python bindings (optional)
pyo3 = { version = "0.20", optional = true, features = ["extension-module", "auto-initialize"] }

# Routing and templating
matchit = "0.6"
tera = { version = "1.18", optional = true }

# Utilities
bytes = "1.4"
parking_lot = "0.12"
dashmap = "5.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
mime_guess = "2.0"
walkdir = "2.3"
base64 = "0.21"
once_cell = "1.18"
flate2 = "1.0"
brotli = "3.3"
zstd = "0.13"
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
constant-time-eq = "0.3"
regex = "1.10"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
criterion = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"