[build-system]
requires = ["setuptools", "wheel", "maturin>=0.12,<0.13", "setuptools-rust>=1.5.2"]
build-backend = "setuptools.build_meta"

[project]
name = "haske"
version = "0.1.0"
description = "A high-performance Python web framework with Rust extensions"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "starlette >=0.27.0",
    "uvicorn >=0.20.0",
    "jinja2 >=3.0.0",
    "sqlalchemy >=1.4.0",
    "typer >=0.9.0",
    "python-multipart >=0.0.5",
    "httpx >=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest >=7.0.0",
    "pytest-asyncio >=0.20.0",
    "black >=22.0.0",
    "mypy >=0.991",
    "ruff >=0.0.260",
]
all = [
    "haske[dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/haske"
Documentation = "https://haske.readthedocs.io"
Repository = "https://github.com/yourusername/haske"
Changelog = "https://github.com/yourusername/haske/releases"

[tool.maturin]
features = ["simd", "extension-module"]

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I", "C", "W"]
ignore = ["E501", "E203"]

[tool.black]
line-length = 88
target-version = ['py38']

rust = [
    "maturin >=0.14,<0.15",
]
